--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ authors:
   jorh:
     display_name: Jorhabib Eljaik
     # gravatar: 76dbcc74021b8039f14c7b583978b56d
-    email: jorhabib.eljaik@iit.it
+    email: eljaik@isir.upmc.fr
     web: https://github.com/jeljaik
    # twitter:
     github: jeljaik
