--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ share:
 enableTags: true
 tagarray: []
 
-url: "http://ocra-recipes.github.io/web"
+url: "https://ocra-recipes.github.io/web"
 baseurl: "/web"
 paginate: 10
 per_page: 10
