Changed Travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,10 @@ addons:
       - doxygen-gui
       - graphviz
 
-# Build your code e.g. by calling make
-script:
-  - make
+before_script:
+    - cd $TRAVIS_BUILD_DIR
+    - chmod +x generateDocumentationAndDeploy.sh
 
 # Generate and deploy documentation
-after_success:
-  - cd $TRAVIS_BUILD_DIR
-  - chmod +x generateDocumentationAndDeploy.sh
+script:
   - ./generateDocumentationAndDeploy.sh
