--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ baseurl: "/web"
 paginate: 10
 per_page: 10
 paginate_path: "/page:num/"
-markdown: kramdown
+markdown: redcarpet
 gems:
   - jekyll-paginate
   - jekyll-gist
